--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "export NODE_ENV=development && node ./bin/www",
+    "prod": "export NODE_ENV=production && node ./bin/www"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "config": "^1.30.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
